--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
   <body>
-    <h1>Hello there!</h1>
-    <a href="/me.html">My other page</a>
+    <h1>Global Perspective</h1>
+    <div>
+        <select onchange="content()">
+        <option id="IRR">IRR</option>
+        <option id="TRR">TRR</option>
+        <option id="Oceania">Oceania</option>
+        </select>
+    </div>
   </body>
 </html>
