--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <html>
   <head>
-  <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-firestore.js"></script>
-    <meta charset="UTF-8">
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-firestore.js"></script>
+    <meta charset="UTF-8" />
     <script src="script.js"></script>
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
   <body>
     <h1>Global Perspective</h1>
     <div>
-        <select onchange="content()">
+      <select onchange="content()" id="content">
         <option id="IRR">IRR</option>
         <option id="TRR">TRR</option>
         <option id="Oceania">Oceania</option>
-        </select>
+      </select>
+
+      <h1 id="title"></h1>
+      <p id="main-content"></p>
     </div>
   </body>
 </html>
