--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Global Perspective</h1>
     <div>
       <select onchange="content()" id="content">
+        <option id="Home">Home</option>
         <option id="IRR">IRR</option>
         <option id="TRR">TRR</option>
         <option id="Oceania">Oceania</option>
