--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <option id="Oceania">Oceania</option>
       </select>
 
-      <h2 id="title"></h2>
+      <h2 id="title">What is Global Perspective</h2>
       <p id="main-content"></p>
     </div>
   </body>
