--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
   <head>
+    
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-firestore.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="UTF-8" />
     <script src="script.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
+
   </head>
   <body>
     <h1>Global Perspective</h1>
