--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <html>
   <head>
-    
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-firestore.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta charset="UTF-8" />
     <script src="script.js"></script>
-
   </head>
   <body>
-    <h1>Global Perspective</h1>
+    <h1 id="main">Global Perspective</h1>
     <div>
       <select onchange="content()" id="content">
         <option id="Home">Home</option>
