--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
       <h2 id="title">What is Global Perspective</h2>
       <p id="main-content">Global Perspectives is a subject in which  students at education develop outstanding transferable skills, including critical thinking, research and collaboration. It is fun place in which where do research and have fun. For 6th Grade we did reseach on the continet called Ocienia, Induvidual Research Report, Team Research Report and many more</p>
+      <iframe src="https://docs.google.com/document/d/e/2PACX-1vQc9irotNwh0HGGL6FpVmtrsukXbiGYsX8obn0WeD4a1wH943DBc3xD8UTSxHH95QVz0dgOK7W8BTD_/pub?embedded=true"></iframe>
     </div>
   </body>
 </html>
