--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta charset="UTF-8" />
     <script src="script.js"></script>
-    <script>document.getElementById('hi').style.display = 'none';</script>
+    <script>
+      document.getElementById('hi').style.display = 'none';
+      console.log('hi');
+    </script>
   </head>
   <body>
     <h1 id="main">Global Perspective</h1>
