--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta charset="UTF-8" />
     <script src="script.js"></script>
     <script>
-      document.getElementById('hi').style.display = 'none';
-      console.log('hi');
+      document.getElementById('irr').style.display = 'none';
     </script>
   </head>
   <body>
@@ -18,11 +17,11 @@
         <option id="Home">Home</option>
         <option id="IRR">IRR</option>
         <option id="TRR">TRR</option>
-        <option id="Oceania">Oceania</option>
+        <option id="Libebrty">Liberty</option>
       </select>
 
       <h2 id="title">What is Global Perspective</h2>
-      <p id="main-content">
+      <p id="home-content">
         Global Perspectives is a subject in which students at education develop
         outstanding transferable skills, including critical thinking, research
         and collaboration. It is fun place in which where do research and have
@@ -31,9 +30,15 @@
       </p>
 
       <iframe
-        class="hi"
-        id="hi"
+        class="irr-content"
+        id="irr"
         src="https://docs.google.com/document/d/e/2PACX-1vQc9irotNwh0HGGL6FpVmtrsukXbiGYsX8obn0WeD4a1wH943DBc3xD8UTSxHH95QVz0dgOK7W8BTD_/pub?embedded=true"
+      ></iframe>
+
+      <iframe
+        class="irr-content"
+        id="liberty"
+        src="https://docs.google.com/document/d/e/2PACX-1vQYIdgfuxDVOQ1ODGn9GFYycYNopBzoM0UrbO6qc_9VRXRmPX0dhW2eczBMAFUEqmhl3nxllQkwXyuz/pub?embedded=true"
       ></iframe>
     </div>
   </body>
